add balance sheet model and service tests as well as jest package setup

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ client/.DS_Store
 /server/node_modules/
 /server/dist/
 /server/*.tsbuildinfo
+/server/.jest/
+/server/coverage/
 
 # server environment files
 /server/.env
