--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "dist/server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "ts-node-dev --respawn --transpile-only src/server/server.ts",
     "build": "tsc",
     "start": "node dist/server/server.js"
@@ -20,7 +22,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.15",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
