--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "coverage": "jest --coverage",
     "dev": "ts-node-dev --respawn --transpile-only src/server/server.ts",
     "build": "tsc",
     "start": "node dist/server/server.js"
