--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/axios": "^0.14.4",
     "@types/supertest": "^6.0.3",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
